# SPH-Simulations

./: .gitignore  .travis.yml  ACSE4-group-project-report.ipynb  CMakeLists.txt  LICENSE  README.md  SPH_2D.cpp  SPH_2D.h  convergence_analysis.ipynb  explain.ipynb  main.cpp  navier_stokes.cpp  navier_stokes.h  post_processing.py  requirements.txt
convergence_data/ie/: ie_0.04.vtp  ie_0.05.vtp  ie_0.08.vtp  ie_0.1.vtp  ie_0.16.vtp  ie_0.2.vtp  ie_0.4.vtp  ie_0.5.vtp  ie_0.8.vtp
includes/: SPH_2D.h  file_writer.h  navier_stokes.h
src/: CMakeLists.txt  SPH_2D.cpp  SPH_Snippet.cpp  file_writer.cpp  navier_stokes.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SPH_main  cmake_install.cmake  particles_0.000000.vtp  particles_0.001300.vtp  test_SPH_2D.cpp  test_file_writer.cpp
tests/Testing/Temporary/: CTestCostData.txt
tests/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  particles_0.012966.vtp  test_SPH  test_file_writer
